changing tournament to league, and finishing visual base pages

--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,18 @@
 }
 
 .bg-default-blue{
-  @apply bg-gradient-to-r from-blue-700 via-blue-800 to-blue-700 border-solid border-2 border-fuchsia-400 text-white text-center content-center items-center justify-items-center;
+  @apply bg-gradient-to-r  from-blue-500 hover:from-blue-300 via-blue-600 hover:via-blue-500  to-blue-500 hover:to-blue-300 text-white text-center content-center items-center justify-items-center;
 }
 
+.border-default-violet{
+  @apply bg-gradient-to-r from-violet-500 via-violet-300 to-violet-500 p-1 rounded-xl w-fit;
+}
 
 .background-image{
-  background-image: url('./assets/images/bg8-3.jpg');
+  height: 100vh;
+  width: 100%;
+  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 900px;
+
 }
